chore: implement script for parachain onboarding

--- a/parachain/static_files/javascript/package.json
+++ b/parachain/static_files/javascript/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "register": "node register.js"
+    "register": "node register.js",
+    "onboard": "node onboard.js"
   },
   "keywords": [],
   "dependencies": {
