test: comment parachain run command to test cache kurtosis

--- a/.github/workflows/smoke.yaml
+++ b/.github/workflows/smoke.yaml
@@ -32,6 +32,6 @@ jobs:
             - name: Starting the Kurtosis engine
               run: kurtosis engine start
             
-            - name: Run parachain
-              run: |
-                kurtosis run . --args-file ./local.json --enclave polkadot
+            # - name: Run parachain
+            #   run: |
+            #     kurtosis run . --args-file ./local.json --enclave polkadot
