--- a/.github/workflows/local.yaml
+++ b/.github/workflows/local.yaml
@@ -28,7 +28,14 @@ jobs:
                   echo "Processing para chain: $para_chain, relay chain: $relay_chain"
                   # Call Python script with para_chain and relay_chain as arguments
                   python ./testdata/generate_json.py --relay "$relay_chain" --para "$para_chain" --network "local"
-                  kurtosis run . --args-file ./testdata/updated_config.json --enclave polkadot
+                  kurtosis run . --args-file ./testdata/updated_config.json --enclave polkadot || true
+
+                  # Check if Kurtosis command failed
+                  if [ $? -ne 0 ]; then
+                    echo "Chain $para_chain failed."
+                  else
+                    echo "Chain $para_chain succeeded."
+                  fi
                 done < ./testdata/chain_value.csv
                 
             
