--- a/.github/workflows/testnet.yaml
+++ b/.github/workflows/testnet.yaml
@@ -28,30 +28,23 @@ jobs:
               run: |
                 # Read CSV file and extract values
                 while IFS=',' read -r para_chain relay_chain; do
-                  kurtosis clean -a
-                  echo "Processing para chain: $para_chain, relay chain: $relay_chain"
-                  # Call Python script with para_chain and relay_chain as arguments
-                  python ./testdata/generate_json.py --relay "$relay_chain" --para "$para_chain" --network "testnet"
-                  kurtosis run . --args-file ./testdata/updated_config.json --enclave polkadot || true
-
-                  # Check if Kurtosis command failed
-                  if [ $? -ne 0 ]; then
-                    echo "Chain $para_chain failed."
-                    failed_chains+=("$para_chain")
-                  else
-                    echo "Chain $para_chain succeeded."
-                  fi
-                done < ./testdata/chain_value.csv
-
-              
-            - name: Print failed chains
-              run: |
-                    if [ ${#failed_chains[@]} -gt 0 ]; then
-                      echo "Failed chains: ${failed_chains[@]}"
-                    else
-                      echo "All chains succeeded."
-                    fi
+                kurtosis clean -a
+                echo "Processing para chain: $para_chain, relay chain: $relay_chain"
                 
+                # Call Python script with para_chain and relay_chain as arguments
+            
+                if [ "$para_chain" == 'parallel' ] || [ "$para_chain" == 'subzero' ]; then
+                    echo "testnet not supported for $para_chain"
+                else
+                    python ./testdata/generate_json.py --relay "$relay_chain" --para "$para_chain" --network "testnet"
+                    kurtosis run . --args-file ./testdata/updated_config.json --enclave polkadot || failed_chains+=("$para_chain")
+                fi
+                done < ./testdata/chain_value.csv             
+                if [ ${#failed_chains[@]} -gt 0 ]; then
+                  echo "Failed chains: ${failed_chains[@]}"
+                else
+                  echo "All chains succeeded."
+                fi
             
 
                
