fix: fix issue of xcm testing chopstick

--- a/chopsticks/config.json
+++ b/chopsticks/config.json
@@ -1,7 +1,8 @@
 {
     "parachain": "acala",
     "xcm": {
-        "relaychain": "polakdot",
+        "relaychain": "polkadot",
         "parachains": ["acala", "moonbeam"]
-    }
+    },
+    "explorer": true
 }
