refactor: format config.json

--- a/chopsticks/config.json
+++ b/chopsticks/config.json
@@ -2,6 +2,9 @@
     "parachain": "acala",
     "xcm": {
         "relaychain": "polkadot",
-        "parachains": ["acala", "moonbeam"]
+        "parachains": [
+            "acala",
+            "moonbeam"
+        ]
     }
 }
