--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
       {
         "name": "bob",
         "node_type": "full",
-        "prometheus": true
+        "prometheus": false
 
       }
     ]
@@ -19,21 +19,16 @@
 
   "parachains": [
     {
-      "name":"acala",
+      "name":"zeitgeist",
       "nodes": [
         {
           "name": "alice",
           "node_type": "validator",
           "prometheus": false
 
-        },
-        {
-          "name": "bob",
-          "node_type": "full",
-          "prometheus": true
         }
       ]
     }
   ],
-  "explorer": true
+  "explorer": false
 }
