--- a/.github/workflows/local.yaml
+++ b/.github/workflows/local.yaml
@@ -31,7 +31,7 @@ jobs:
                   kurtosis clean -a
                   echo "Processing para chain: $para_chain, relay chain: $relay_chain"
                   # Call Python script with para_chain and relay_chain as arguments
-                  python ./testdata/generate_json.py --relay "$relay_chain" --para "$para_chain" --network "local"
+                  python ./testdata/generate_json.py --relay "$relay_chain" --para "$para_chain" --network "localnet"
                   kurtosis run . --args-file ./testdata/updated_config.json --enclave polkadot || failed_chains+=("$para_chain")
                 done < ./testdata/chain_value.csv
                 if [ ${#failed_chains[@]} -gt 0 ]; then
