--- a/config.json
+++ b/config.json
@@ -19,32 +19,20 @@
 
   "parachains": [
     {
-      "name":"frequency",
+      "name":"acala",
       "nodes": [
         {
           "name": "alice",
           "node_type": "collator",
-          "prometheus": false,
-          "key":{
-            "private_phrase":"dizzy rose offer wall social glory debris gift govern seminar almost bicycle" ,
-            "public_key":"5G3vA9UC6J7hPN5Jqfiz4qFNqYAfahHxffbuQf6dcZZx3Yx6"
-          }
+          "prometheus": false
 
         },
         {
           "name": "bob",
           "node_type": "full",
-          "prometheus": false,
-          "key": {
-            "private_phrase":"diamond crane pioneer aisle conduct media news cup price olive dust light" ,
-            "public_key":"5GgwsM48CCT7oPUyFTTpE5L1t7Fjpe7D8SDNKxJxug15YEKy"
-          }
+          "prometheus": false
         }
-      ],
-      "sudo_key": {
-        "private_phrase":"dizzy rose offer wall social glory debris gift govern seminar almost bicycle" ,
-        "public_key":"5G3vA9UC6J7hPN5Jqfiz4qFNqYAfahHxffbuQf6dcZZx3Yx6"
-      }
+      ]
     }
   ],
   
